--- a/app/views/landing/index.html.haml
+++ b/app/views/landing/index.html.haml
@@ -29,4 +29,4 @@
   %a{class: "", "data-popover-target": "scroll-to-top", "data-popover-placement": "left", type: "button", href: "#main"}
     %i{class: "text-2xl text-stone-600 fa-solid fa-jet-fighter-up"}
   %div{id: "scroll-to-top", class: "w-24 absolute z-10 invisible inline-block transition-opacity duration-300", "data-popover": "", role: "tooltip"}
-    %p{class: "font-messiri text-xl text-stone-600"} До початку
+    %p{class: "font-messiri text-md text-stone-600"} До початку
