--- a/app/views/landing/_2_services.html.haml
+++ b/app/views/landing/_2_services.html.haml
@@ -6,7 +6,7 @@
     %div{class: "grid grid-cols-1 md:grid-cols-3 sm:grid-cols-2 xs:grid-cols-1 xl:grid-cols-3 gap-5"}
       %a{class: "rounded-xl shadow-lg hover:shadow-lg hover:shadow-red-300", href: services_path}
         %div{class: "row relative"}
-          = image_tag("zip.jpg", class: "transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0 object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "Швейна майстерня ☞ ДРУЖБА ☜ - Заміна замків у верхньому та легкому одягу")
+          = image_tag("zip.avif", class: "transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0 object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "Швейна майстерня ☞ ДРУЖБА ☜ - Заміна замків у верхньому та легкому одягу")
           %div{class: "p-4 pt-2 h-auto md:h-70 lg:h-70 xl:h-70"}
             %div{class: "mb-8"}
               %h2{class: "text-gray-900 font-bold text-lg mb-2 hover:text-red-500 inline-block"}
@@ -20,7 +20,7 @@
                 але з нашою допомогою, ви зможете продовжити використовувати улюблені речі ще довгий час.
       %a{class: "rounded-xl shadow-lg hover:shadow-lg hover:shadow-red-300", href: services_path}
         %div{class: "row relative"}
-          = image_tag("jeans.jpg", class: "transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0 object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "Швейна майстерня ☞ ДРУЖБА ☜ - Штопка (штуковка джинсових виробів)")
+          = image_tag("jeans.avif", class: "transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0 object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "Швейна майстерня ☞ ДРУЖБА ☜ - Штопка (штуковка джинсових виробів)")
           %div{class: "p-4 pt-2 h-auto md:h-70 lg:h-70 xl:h-70"}
             %div{class: "mb-8"}
               %h2{class: "text-gray-900 font-bold text-lg mb-2 hover:text-red-500 inline-block"}
@@ -35,7 +35,7 @@
 
       %a{class: "rounded-xl shadow-lg hover:shadow-lg hover:shadow-red-300", href: services_path}
         %div{class: "row relative"}
-          = image_tag("skin.jpg", class: "transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0 object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "Швейна майстерня ☞ ДРУЖБА ☜ - Ремонт шкіряних та хутрових виробів")
+          = image_tag("skin.avif", class: "transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0 object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "Швейна майстерня ☞ ДРУЖБА ☜ - Ремонт шкіряних та хутрових виробів")
           %div{class: "p-4 pt-2 h-auto md:h-70 lg:h-70 xl:h-70"}
             %div{class: "mb-8"}
               %h2{class: "text-gray-900 font-bold text-lg mb-2 hover:text-red-500 inline-block"}
@@ -51,7 +51,7 @@
     
       %a{class: "rounded-xl shadow-lg hover:shadow-lg hover:shadow-red-300", href: services_path}
         %div{class: "row relative"}
-          = image_tag("niz.jpg", class: "transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0 object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "Швейна майстерня ☞ ДРУЖБА ☜ - Підгін низу (джинси, сукні, пальто та інші речі)")
+          = image_tag("niz.avif", class: "transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0 object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "Швейна майстерня ☞ ДРУЖБА ☜ - Підгін низу (джинси, сукні, пальто та інші речі)")
           %div{class: "p-4 pt-2 h-auto md:h-70 lg:h-70 xl:h-70"}
             %div{class: "mb-8"}
               %h2{class: "text-gray-900 font-bold text-lg mb-2 hover:text-red-500 inline-block"}
@@ -67,7 +67,7 @@
 
       %a{class: "rounded-xl shadow-lg hover:shadow-lg hover:shadow-red-300", href: services_path}
         %div{class: "row relative"}
-          = image_tag("melkiy.jpg", class: "transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0 object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "Швейна майстерня ☞ ДРУЖБА ☜ - Дрібний ремонт одягу")
+          = image_tag("melkiy.avif", class: "transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0 object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "Швейна майстерня ☞ ДРУЖБА ☜ - Дрібний ремонт одягу")
           %div{class: "p-4 pt-2 h-auto md:h-70 lg:h-70 xl:h-70"}
             %div{class: "mb-8"}
               %h2{class: "text-gray-900 font-bold text-lg mb-2 hover:text-red-500 inline-block"}
@@ -82,7 +82,7 @@
 
       %a{class: "rounded-xl shadow-lg hover:shadow-lg hover:shadow-red-300", href: services_path}
         %div{class: "row relative"}
-          = image_tag("shtory.jpg", class: "transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0 object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "Швейна майстерня ☞ ДРУЖБА ☜ - Підшивання штор")
+          = image_tag("shtory.avif", class: "transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0 object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "Швейна майстерня ☞ ДРУЖБА ☜ - Підшивання штор")
           %div{class: "p-4 pt-2 h-auto md:h-70 lg:h-70 xl:h-70"}
             %div{class: "mb-8"}
               %h2{class: "text-gray-900 font-bold text-lg mb-2 hover:text-red-500 inline-block"}
