--- a/app/views/landing/_3_hero_section.html.haml
+++ b/app/views/landing/_3_hero_section.html.haml
@@ -11,5 +11,5 @@
     -#    Якість послуг та ціни змушують наших клієнтів приходити до нас знову та знову.
     %div{class: "mt-3 flow-root"}
       %div{class: "w-full transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0 rounded-xl p-2 ring-1 ring-inset lg:-m-4 lg:rounded-2xl lg:p-4 bg-gray-900/5 ring-gray-900/10"}
-        = image_tag("hero-2.jpg", class: "w-full h-[200px] md:h-[400px]", alt: "Швейна майстерня ☞ ДРУЖБА ☜")
+        = image_tag("hero-2.avif", class: "w-full h-[200px] md:h-[400px]", alt: "Швейна майстерня ☞ ДРУЖБА ☜")
 
