--- a/app/views/services/index.html.haml
+++ b/app/views/services/index.html.haml
@@ -11,11 +11,11 @@
             = image_tag(service.image, class: "rounded-t-xl w-full h-[150px] sm:w-full sm:h-[200px] transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0", alt: service.title)
           - else
             = image_tag("favicon.png", class: "rounded-t-xl w-full h-[150px] sm:h-[200px] transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0", alt: service.title)
-          %div{class: "p-4 pt-2 h-auto md:h-70 lg:h-64 xl:h-60"}
+          %div{class: "p-4 pt-2 h-auto md:h-70 lg:h-64"}
             %div{class: "mb-8"}
-              %p.text-gray-900.font-bold.text-lg.mb-2.hover:text-red-500.inline-block
+              %p{class: "text-gray-900 font-bold text-lg mb-2 hover:text-red-500 inline-block"}
                 = service.title
-              %p.text-gray-700.text-sm.text-ellipsis
+              %p{class: "text-gray-700 text-sm text-ellipsis"}
                 = service.description
           -#%div{class: "pe-2 pb-2 text-red-500 w-full flex justify-end items-end"}
           -#  %div{class: "pe-2 sm:pe-4 w-full sm:w-2/3 border-t-2 border-red-300 text-end"}
