--- a/app/views/services/index.html.haml
+++ b/app/views/services/index.html.haml
@@ -11,7 +11,7 @@
             = image_tag(service.image, class: "rounded-t-xl w-full h-[150px] sm:w-full sm:h-[200px] transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0", alt: service.title)
           - else
             = image_tag("favicon.png", class: "rounded-t-xl w-full h-[150px] sm:h-[200px] transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0", alt: service.title)
-          %div{class: "p-4 pt-2 h-auto md:h-70 lg:h-64"}
+          %div{class: "p-4 pt-2 h-auto md:h-72"}
             %div{class: "mb-8"}
               %p{class: "text-gray-900 font-bold text-lg mb-2 hover:text-red-500 inline-block"}
                 = service.title
