--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -14,8 +14,9 @@
 
     = csrf_meta_tags
     = csp_meta_tag
-    = stylesheet_link_tag "application", "inter-font", "data-turbo-track": "reload"
     = stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload"
+    = stylesheet_link_tag "application", "inter-font", "data-turbo-track": "reload"
+    = stylesheet_link_tag "custom", "data-turbo-track": "reload"
     = javascript_include_tag 'application', 'data-turbo-track': 'reload', defer: true, async: ""
 
     -# FlowbiteJS
