--- a/app/views/shared/_5_about.html.haml
+++ b/app/views/shared/_5_about.html.haml
@@ -21,7 +21,7 @@
           %div{class: "relative"}
             %dt
               %div{class: "absolute flex items-center justify-center h-12 w-12 rounded-md bg-primary-500 text-white"}
-                = image_tag "mashine.svg", alt: "#{t ("landing.about.dl2.img")}"
+                = image_tag "button.svg", alt: "#{t ("landing.about.dl2.img")}"
               %p{class: "font-heading ml-16 text-lg leading-6 font-bold text-gray-700"}
                 = t ("landing.about.dl2.p")
             %dd{class: "mt-2 ml-16 text-base text-gray-500 text-justify"}
@@ -29,19 +29,19 @@
           %div{class: "relative"}
             %dt
               %div{class: "absolute flex items-center justify-center h-12 w-12 rounded-md bg-primary-500 text-white"}
-                = image_tag "mashine.svg", alt: "#{t ("landing.about.dl1.img")}"
+                = image_tag "model.svg", alt: "#{t ("landing.about.dl3.img")}"
               %p{class: "font-heading ml-16 text-lg leading-6 font-bold text-gray-700"}
-                = t ("landing.about.dl1.p")
+                = t ("landing.about.dl3.p")
             %dd{class: "mt-2 ml-16 text-base text-gray-500 text-justify"}
-              = t ("landing.about.dl1.dd")
+              = t ("landing.about.dl3.dd")
           %div{class: "relative"}
             %dt
               %div{class: "absolute flex items-center justify-center h-12 w-12 rounded-md bg-primary-500 text-white"}
-                = image_tag "mashine.svg", alt: "#{t ("landing.about.dl2.img")}"
+                = image_tag "pins.svg", alt: "#{t ("landing.about.dl4.img")}"
               %p{class: "font-heading ml-16 text-lg leading-6 font-bold text-gray-700"}
-                = t ("landing.about.dl2.p")
+                = t ("landing.about.dl4.p")
             %dd{class: "mt-2 ml-16 text-base text-gray-500 text-justify"}
-              = t ("landing.about.dl2.dd")
+              = t ("landing.about.dl4.dd")
       %div{class: "text-center"}
         %h3{class: "mt-8 max-w-5xl text-2xl text-red-500 mx-auto font-semibold"}
           %span{class:""}
