--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -13,7 +13,7 @@
             = image_tag("favicon.png", class: "rounded-t-xl w-full h-[150px] sm:h-[200px] transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0", alt: article.title)
           %div{class: "p-4 pt-2 h-auto md:h-72"}
             %div{class: "mb-8"}
-              %p{class: "text-stone-900 font-bold text-lg mb-2 hover:text-red-500 inline-block"}
+              %h2{class: "text-stone-900 font-bold text-lg mb-2 hover:text-red-500 inline-block"}
                 = article.title
                 %i{class: "text-indigo-500 font-bold text-sm mb-2 inline-block"}
                   \#
