--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,8 +1,16 @@
 !!!
 %html{lang: "#{I18n.locale}"}
   %head
-    -# Google tag (gtag.js)
-    %script{async: "", "data-turbo-track": "reload", src: "https://www.googletagmanager.com/gtag/js?id=G-B1HN94WVHN"}
+
+    -# Google Tag Manager
+    -#:javascript
+      (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+      j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+      'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+      })(window,document,'script','dataLayer','GTM-TJBHGWFJ');
+    -# End Google Tag Manager
+
 
     %title
       = @page_title.present? ? "Швейна майстерня ☞ДРУЖБА☜ - #{@page_title}" : "Швейна майстерня ☞ ДРУЖБА ☜"
@@ -36,10 +44,27 @@
           integrity: "sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==",
           rel: "stylesheet"}
 
-  %body{class: "bg-stone-100", id: "main", "data-controller": "landing--index"}
     -# FlowbiteJS
     %link{href: "https://unpkg.com/browse/flowbite@2.4.1/dist/flowbite.css", rel: "stylesheet"}
     %script{async: "", src: "https://unpkg.com/browse/flowbite@2.4.1/dist/flowbite.min.js"}
+
+    -# Google tag (gtag.js)
+    %script{async: "", "data-turbo-track": "reload", src: "https://www.googletagmanager.com/gtag/js?id=G-B1HN94WVHN"}
+    :javascript
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments)};
+      gtag('js', new Date());
+      gtag('config', 'GTM-TJBHGWFJ');
+      gtag('config', 'pub-3829218691602401');
+      gtag('config', 'G-B1HN94WVHN');
+
+  %body{class: "bg-stone-100", id: "main", "data-controller": "landing--index"}
+
+    -# Google Tag Manager (noscript)
+    -#%noscript
+    -#  %iframe{:height => "0", :src => "https://www.googletagmanager.com/ns.html?id=GTM-TJBHGWFJ", style: "display:none;visibility:hidden", width: "0"}
+    -# End Google Tag Manager (noscript)
+
 
     %main{class: ""}
       %navigation{class: ""}
