--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,11 +13,6 @@
         'analytics_storage': 'denied'
       });
 
-      %script{async: "", "data-turbo-track": "reload", src: "https://www.googletagmanager.com/gtag/js?id=G-B1HN94WVHN"}
-      gtag('js', new Date());
-      gtag('config', 'GTM-TJBHGWFJ');
-      gtag('config', 'G-B1HN94WVHN');
-
     %title
       = @page_title.present? ? "Швейна майстерня ☞ДРУЖБА☜ - #{@page_title}" : "Швейна майстерня ☞ ДРУЖБА ☜"
     = favicon_link_tag asset_path('favicon.png')
@@ -33,6 +28,14 @@
     = stylesheet_link_tag "application", "inter-font", "data-turbo-track": "reload"
     = stylesheet_link_tag "custom", "data-turbo-track": "reload"
     = javascript_include_tag 'application', 'data-turbo-track': 'reload', defer: true, async: ""
+
+    :javascript
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments)};
+      %script{async: "", "data-turbo-track": "reload", src: "https://www.googletagmanager.com/gtag/js?id=G-B1HN94WVHN"}
+      gtag('js', new Date());
+      gtag('config', 'GTM-TJBHGWFJ');
+      gtag('config', 'G-B1HN94WVHN');
         
     -# AnimatedCSS and WOWjs
     %link{href: "https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css", rel: "stylesheet"}
