--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -4,17 +4,17 @@
       = t ("articles.h1")
 %div{class: "max-w-7xl mx-auto p-5 sm:p-10 md:p-16"}
   = turbo_frame_tag "articles_list", src: articles_url(format: :turbo_stream, page: params[:page]), loading: "lazy" do
-    %div{id: "articles_card_skeleton", class: "grid grid-cols-1 md:grid-cols-3 sm:grid-cols-2 xl:grid-cols-4 lg:grid-cols-4 gap-10"}
-      = 4.times do
-        .bg-white.rounded-xl.shadow-lg.overflow-hidden.shadow.flex.flex-col
+    %div{id: "articles_card_skeleton", class: "mb-28 grid grid-cols-1 md:grid-cols-3 sm:grid-cols-2 xl:grid-cols-4 lg:grid-cols-4 gap-10"}
+      - 4.times do
+        %div{class: "bg-white rounded-xl shadow-lg overflow-hidden shadow flex flex-col"}
           %div{class: "animate-pulse bg-gray-100 w-full block rounded-t-xl w-full h-[100px] sm:w-full sm:h-[150px]"}
-          .px-8.py-6.flex-1
-            %h2.font-mono.text-xl.font-bold
-              %span.rounded.animate-pulse.bg-gray-200.block{:class => "w-3/4 py-2"}
-            .mt-8.space-y-4
-              %p.w-full.rounded.animate-pulse.bg-gray-200.block{:class => "py-1"}
-              %p.rounded.animate-pulse.bg-gray-200.block{:class => "w-5/6 py-1"}
-              %p.w-full.rounded.animate-pulse.bg-gray-200.block{:class => "py-1"}
-            %p.mt-8.rounded.animate-pulse.bg-gray-200.block{:class => "w-5/6 py-1"}
+          %div{class: "px-8 py-6 flex-1"}
+            %h2{class: "font-mono text-xl font-bold"}
+              %span{class: "rounded animate-pulse bg-gray-200 block w-3/4 py-2"}
+            %div{class: "mt-8 space-y-4"}
+              %p{class: "w-full rounded animate-pulse bg-gray-200 block py-1"}
+              %p{class: "rounded animate-pulse bg-gray-200 block w-5/6 py-1"}
+              %p{class: "w-full rounded animate-pulse bg-gray-200 block py-1"}
+            %p{class: "mt-8 rounded animate-pulse bg-gray-200 block w-5/6 py-1"}
   
   = turbo_frame_tag "articles_pagination", data: { controller: "turbo-frame-history" }
