--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,6 +1,7 @@
 !!!
 %html{lang: "#{I18n.locale}"}
   %head
+    %link{href: "https://druzhba.biz.ua/#{I18n.locale}/", rel: "canonical"}
     %link{href: "https://druzhba.biz.ua/#{I18n.locale}/", hreflang: "#{I18n.locale}", rel: "alternate"}
       -# Google tag (gtag.js)
       :javascript
