--- a/app/views/shared/_image_gallery_modal.html.haml
+++ b/app/views/shared/_image_gallery_modal.html.haml
@@ -1,7 +1,7 @@
 - (1..3).each do |i|
-  %div{id: "image-modal-#{i}", tabindex: "-1", "aria-hidden": "true", class: "font-messiri fixed z-50 inset-0 overflow-y-auto hidden", data: { modal_target: "image-modal-#{i}" }}
+  %div{id: "image-modal-#{i}", tabindex: "-1", class: "font-messiri fixed z-50 inset-0 overflow-y-auto hidden h-screen", data: { modal_target: "image-modal-#{i}" }, "aria-hidden": "true"}
     %div{class: "flex items-center justify-center min-h-screen"}
-      %div{class: "bg-white p-6 rounded-2xl shadow-md w-5/6 relative"}
+      %div{class: "bg-white p-6 rounded-2xl shadow-md w-5/6 relative h-full"}
         %div{class: "flex justify-end"}
           %button{id: "closeModal-#{i}", class: "text-gray-700 hover:text-red-500", data: { modal_hide: "image-modal-#{i}" }}
             %svg{class: "w-6 h-6", fill: "none", stroke: "currentColor", viewBox: "0 0 24 24", xmlns: "http://www.w3.org/2000/svg"}
